Fri Oct  1 11:34:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Container_Handler.cpp:
          Fixed unicode compile error

Fri Oct  1 11:10:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO.mwc:
        * CIAO_TAO_DAnCE.mwc:
          Reduced amount of projects

Fri Oct  1 09:49:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_defn.mpc:
          Added empty IDL_Files section

Fri Oct  1 09:24:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
        * ccm/CCM_svnt.mpc:
          Reduced files generated

Thu Sep 30 14:17:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.h:
        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
          Removed id generation, we have an empty id or get an id from the cdp

Thu Sep 30 11:33:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_lem_stub.mpc:
          Another missing base project

Thu Sep 30 11:01:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_lem_stub.mpb:
          Added missing base project

Thu Sep 30 06:36:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ccm/Extension/CCM_ServerContainerInterceptorRegistration.idl:
          Fixed typo.

Thu Sep 30 05:58:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.cpp:
          Making use of make_pair to initialize a pair.

Wed Sep 29 21:05:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ami4ccm_lem_stub.mpb:
        * connectors/tests/AMIDDS/Base/AmiDds_Base.mpc:

          Compile fixes.

Wed Sep 29 18:38:17 UTC 2010  Adam Mitz  <mitza@ociweb.com>
