@@ -219,6 +219,9 @@ foreach $file (@files) {
 
     delete_ior_files ();
     kill_open_processes ();
+    
+    # Sleep for a couple seconds to make sure everything has a chance to shut down.
+    sleep 5;
 }
 
 delete_ior_files ();
